aks/common/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: $(namespace)
  name: $(deploymentname)
  labels:
    app: $(deploymentlabel)
spec:
  replicas: $(minreplicas)
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      service: $(deploymentlabel)
  template:
    metadata:
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: $(deploymentlabel)
        dapr.io/app-port: "80"
        dapr.io/config: "dapr-config"
      labels:
        app: $(deploymentlabel)
        service: $(deploymentlabel)
    spec:
      #volumes:
      #- name: app-tls
          #secret:
          #secretName: $(appsecrettls)
      containers:
        - name: $(containername)
          image: $(containerregistery)/$(containername):$(Build.BuildId)
          ports:
            #- name: https
            #containerPort: 443
            #protocol: TCP
          - name: http
            containerPort: 80
            protocol: TCP
            #volumeMounts:
            #- name: app-tls
            # mountPath: /secrets/tls-cert
            # readOnly: true
          resources:
            requests:
              memory: "1024Mi"
              cpu: "0.3"
            limits:
              memory: "1024Mi"
              cpu: "1"
