aks/common/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $(servicename)
  labels:
    app: $(servicelabel)
    service: $(deploymentlabel)
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
  selector:
    service: $(deploymentlabel)
